Update CourseController & csproj to using api analyzer

--- a/contoso-university.csproj
+++ b/contoso-university.csproj
@@ -5,6 +5,10 @@
     <RootNamespace>contoso_university</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.7">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
